[package]
name = "couladj"
version = "0.1.0"
authors = ["Nathan West <Lucretiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
cascade = "1.0.0"
gridly = "0.9.0"
image = "0.23.14"
mimalloc = { version = "0.1.25", default-features=false }
rayon = "1.5.0"
structopt = "0.3.21"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
